<resources>
    <string name="app_name">Nonso</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_to_signup">Don\'t have an account? Sign up!</string>
    <string name="password_hint">Password</string>
    <string name="progress_bar_string">Authenticating...</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="hide_password">Hide Password</string>
    <string name="show_password">Show Password</string>
    <string name="username_hint">Username</string>
    <string name="fullname_hint">Full Name</string>
    <string name="retype_password_hint">Retype Password</string>
    <string name="email_hint">Email</string>
    <string name="signup_disclaimer">By clicking SignUp you agree to all the Terms and Conditions</string>
    <string name="btn_link_to_login">Already have an Account? Login here</string>
    <string name="forgot_password_description">We just need your registered Email to send your password reset instructions</string>
    <string name="reset_password">Reset Password</string>

    <!-- Menu items -->
    <string name="menu_journeys">Journeys</string>
    <string name="menu_discover">Discover</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_publish">Publish</string>
    <string name="menu_post">Post</string>
    <string name="menu_show_cheers">Show cheers</string>
    <string name="menu_hide_cheers">Hide cheers</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_journeys_fragment">Hello Journeys fragment</string>
    <string name="hello_search_fragment">Hello Search fragment</string>
    <string name="hello_notifications_fragment">Hello Notifications fragment</string>
    <string name="hello_profile_fragment">Hello Profile fragment</string>

    <!--- Profile Activity -->
    <string name="profile_goals_temp">This is a temporary goal set to the character limit of 140 char</string>
    <string name="profile_follow">Follow</string>


    <!-- Image dialog -->
    <string name="from_gallery">Select from Gallery</string>
    <string name="from_camera">Take a new Photo</string>
    <string name="profile_select_image">Select Image Source</string>

    <!-- Setting Activity -->
    <string name="settings_header">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="settings_account_header">Account</string>
    <string name="settings_payments">Payments</string>
    <string name="settings_about_header">About</string>
    <string name="settings_content_policy">Content Policy</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_user_agreement">User Agreement</string>
    <string name="settings_acknowledgement">Acknowledgement</string>

    <!-- Create Journeys Activity -->
    <string name="create_journeys_header">Go on a journey</string>
    <string name="create_journey_name">Name</string>
    <string name="create_journey_description_hint">Short description</string>
    <string name="create_journey_settings_title">Decide how friends join this journey</string>
    <string name="create_journey_settings_permission">Permissions</string>
    <string name="create_journey_settings_permission_disclaimer">Require permission to join this journey. If disabled you will get only a notification when a new friend joins.</string>
    <string name="create_journey_settings_subscription">Subscriptions</string>
    <string name="create_journey_settings_subscription_disclaimer">Require subscriptions to join this journey. Subscriptions are a $4.99 monthly charge. If disabled you will not be able to monetize your journey.</string>
    <string name="create_journey_settings_discoverers">Discoverers</string>
    <string name="create_journey_settings_mature_content">Mature Content</string>
    <string name="create_journey_settings_mature_content_disclaimer">Select this if your journey contains mature content.</string>
    <string name="create_journey_setting_discoverers_disclaimer">Show how many friends are currently in this journey. If disabled the number of friends in this journey will be hidden</string>
    <string name="create_journey_settings_disclaimer">These settings can be changed at any time after creating this journey</string>
    <string name="create_journey_progress_bar_string">Taking the first step..</string>

    <!-- Journey Profile Community-->
    <string name="journey_profile_add_post">Add a post</string>
    <string name="create_text_post_add_post">Your Post</string>
    <string name="reply_post"> Your Reply</string>
    <string name="comments">Comments</string>
    <string name="add_comment">Join the conversation..</string>

    <!-- Search TAB-->
    <string name="search">Search&#8230;</string>
    <string name="search_btn_description">Search button</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="people">People</string>
    <string name="journeys">Journeys</string>
    <string name="likes">Likes</string>
    <string name="like">Like</string>
    <string name="liked">Liked</string>


    <!--Dialog-->
    <string name="dialog_title">Update goals</string>
    <string name="dialog_update">Update</string>
    <string name="discard">Discard</string>
    <string name="update_goals_hint">Write your goals..</string>
    <string name="update_journey_description_hint">Journey description.</string>


    <string name="dialog_edit_journey_title">Update description</string>

    <!-- Date Util -->
    <string name="date_util_term_less">less than</string>
    <string name="date_util_term_a">a</string>
    <string name="date_util_term_an">an</string>

    <string name="date_util_unit_second">second</string>
    <string name="date_util_unit_seconds">seconds</string>
    <string name="date_util_unit_minute">minute</string>
    <string name="date_util_unit_minutes">minutes</string>
    <string name="date_util_unit_hour">hour</string>
    <string name="date_util_unit_hours">hours</string>
    <string name="date_util_unit_day">day</string>
    <string name="date_util_unit_days">days</string>
    <string name="date_util_unit_month">month</string>
    <string name="date_util_unit_months">months</string>
    <string name="date_util_unit_year">year</string>
    <string name="date_util_unit_years">years</string>

    <string name="date_util_prefix_lt">less than a</string>
    <string name="date_util_prefix_about">about</string>
    <string name="date_util_prefix_over">over</string>
    <string name="date_util_prefix_almost">almost</string>

    <string name="date_util_suffix">ago</string>
</resources>
