<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    app:cardCornerRadius="@dimen/dp_5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorWhite">

        <EditText
            android:id="@+id/journey_profile_dialog_goals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#C0C0C0"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:textSize="@dimen/h2"
            android:background="@android:color/transparent"
            android:hint="@string/update_journey_description_hint"
            android:textColorHint="@color/colorGray"
            android:maxLines ="4"
            android:gravity="start"
            android:lines="4"
            android:maxLength="160"/>

        <TextView
            android:id="@+id/journey_profile_dialog_char_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/h3"
            android:textColor="#C0C0C0"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_20"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:gravity="end">
            <Button
                android:id="@+id/journey_profile_dialog_discard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discard"
                android:textColor="@color/colorPrimary"
                android:background="@null"/>
            <Button
                android:id="@+id/journey_profile_dialog_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_update"
                android:textColor="@color/colorGray"
                android:background="@null"/>

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
