<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    tools:context="nonso.android.nonso.ui.activities.SignUpActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_up_username"
            android:layout_width ="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="@dimen/login_form_margin"
            android:layout_marginRight="@dimen/login_form_margin"
            android:layout_marginStart="@dimen/login_form_margin"
            android:layout_marginLeft="@dimen/login_form_margin"
            android:layout_marginTop="@dimen/signup_username_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/sign_up_input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/username_hint"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_up_email"
            android:layout_width ="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="@dimen/login_form_margin"
            android:layout_marginRight="@dimen/login_form_margin"
            android:layout_marginStart="@dimen/login_form_margin"
            android:layout_marginLeft="@dimen/login_form_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_username">

            <EditText
                android:id="@+id/sign_up_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email_hint"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_up_password"
            android:layout_width ="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="@dimen/login_form_margin"
            android:layout_marginRight="@dimen/login_form_margin"
            android:layout_marginStart="@dimen/login_form_margin"
            android:layout_marginLeft="@dimen/login_form_margin"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_email">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/sign_up_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password_hint"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sign_up_retype_password"
            android:layout_width ="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="@dimen/login_form_margin"
            android:layout_marginRight="@dimen/login_form_margin"
            android:layout_marginStart="@dimen/login_form_margin"
            android:layout_marginLeft="@dimen/login_form_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/sign_up_password">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/sign_up_input_retype_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/retype_password_hint"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:inputType="textPassword"
                />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/cbx_disclaimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/login_form_margin"
            android:layout_marginStart="@dimen/login_form_margin"
            android:layout_marginTop="@dimen/signup_checkbox_margin_top"
            android:text="@string/signup_disclaimer"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/form_btn_small_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_retype_password" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/login_form_margin"
            android:layout_marginRight="@dimen/login_form_margin"
            android:layout_marginStart="@dimen/login_form_margin"
            android:layout_marginLeft="@dimen/login_form_margin"
            android:layout_marginTop="@dimen/login_btn_margin_top"
            android:background="@drawable/login_button"
            android:text="@string/btn_sign_up"
            android:textColor="@color/login_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cbx_disclaimer"
            android:enabled="false"
             />

        <Button
            android:id="@+id/btn_link_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/login_form_margin"
            android:layout_marginRight="@dimen/login_form_margin"
            android:layout_marginStart="@dimen/login_form_margin"
            android:layout_marginLeft="@dimen/login_form_margin"
            android:layout_marginTop="@dimen/signup_btn_margin_top"
            android:background="@android:color/transparent"
            android:text="@string/btn_link_to_login"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/form_btn_small_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_signup" />

        <LinearLayout
            android:id="@+id/progressBarSignUpContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/progress_bar_margin_top"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress_bar_string" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>

