<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nonso.android.nonso.ui.activities.ForgotPasswordActivity"
    android:background="@drawable/home_background">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageButton
            android:id="@+id/btn_forgot_password_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_dark"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/back_button_margin"
            android:layout_marginLeft="@dimen/back_button_margin"
            android:layout_marginTop="@dimen/back_button_margin"
            />


        <TextView
            android:id="@+id/tv_forgot_password_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_marginTop="@dimen/forgot_password_header_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:textSize="@dimen/forgot_password_header_text_size"
            android:textColor="@color/colorWhite"
            />

        <TextView
            android:id="@+id/tv_forgot_password_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password_header"
            android:text="@string/forgot_password_description"
            android:gravity="center"
            android:layout_marginEnd="@dimen/login_form_margin"
            android:layout_marginRight="@dimen/login_form_margin"
            android:layout_marginStart="@dimen/login_form_margin"
            android:layout_marginLeft="@dimen/login_form_margin"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorGrayDark"
            android:layout_marginTop="@dimen/forgot_password_description_margin_top"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/forgot_password_input_layout_email"
            android:layout_width ="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="@dimen/login_form_margin"
            android:layout_marginRight="@dimen/login_form_margin"
            android:layout_marginStart="@dimen/login_form_margin"
            android:layout_marginLeft="@dimen/login_form_margin"
            android:layout_marginTop="@dimen/email_input_margin_top_forgot_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password_description">

            <EditText
                android:id="@+id/forgot_password_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Email"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_forgot_password_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/login_form_margin"
            android:layout_marginRight="@dimen/login_form_margin"
            android:layout_marginStart="@dimen/login_form_margin"
            android:layout_marginLeft="@dimen/login_form_margin"
            android:layout_marginTop="@dimen/login_btn_margin_top"
            android:background="@drawable/login_button"
            android:text="@string/reset_password"
            android:textColor="@color/login_button_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_input_layout_email"
            android:enabled="false"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>


